--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/css/global.css">
   <link rel="stylesheet" href="./assets/css/menu/menu.css">
-  <link rel="stylesheet" href="./assets/css/menu/menu-list.css">
-  <link rel="stylesheet" href="./assets/css/menu/menu-item.css">
   <link rel="stylesheet" href="./assets/css/started/started.css">
+  <link rel="stylesheet" href="./assets/css/features/features.css">
+  <link rel="stylesheet" href="./assets/css/productive/productive.css">
+  <link rel="stylesheet" href="./assets/css/depoiments/depoiments.css">
   
   <title>Fylo DarkTheme</title>
 </head>
 <body>
-  <section class="container">
-    <header class="menu">
+  <img class="started__bgCurvy" src="./assets/icons/bg-curvy-desktop.svg">
+    <header class="menu container">
       <nav>
         <img class="menu__img" src="./assets/icons/logo.svg" alt="Fylo">
         <ul class="menu__list">
@@ -34,6 +35,97 @@
       </p>
       <button class="started__button">Get Started</button>
     </section>
-  </section>
+    
+    <main class="info ">
+      <section class="features container">
+        <div class="features__items">
+          <img class="feature__img" src="./assets/icons/icon-access-anywhere.svg" alt="acesso aos seus arquivos">
+          <h3 class="feature__title">Access your files, anywhere</h3>
+          <p class="feature_paragraph">The ability to use a smartphone, tablet, or 
+            computer to acces your 
+            account means your files follow you everywhere</p>
+        </div>
+        <div class="features__items">
+          <img class="feature__img" src="./assets/icons/icon-security.svg" alt="acesso aos seus arquivos">
+          <h3 class="feature__title">Security you can trust</h3>
+          <p class="feature_paragraph">2-factor authentication and user-controlled
+             encryption are just a couple of the security featuures we allow to help
+              secure your files</p>
+        </div>
+        <div class="features__items">
+          <img class="feature__img" src="./assets/icons/icon-collaboration.svg" alt="acesso aos seus arquivos">
+          <h3 class="feature__title">Real-time collaboration</h3>
+          <p class="feature_paragraph">Securely share files and folders with friends,
+             family and colleagues for live collaboration. No email attachments required.</p>
+        </div>
+        <div class="features__items">
+          <img class="feature__img" src="./assets/icons/icon-any-file.svg" alt="acesso aos seus arquivos">
+          <h3 class="feature__title">store any type of file</h3>
+          <p class="feature_paragraph">Whether you're sharing holidays photos or
+            work documents, Fylo has you covered allowing for all file types to be
+             securely stored and shared</p>
+        </div>
+      </section>
+
+      <section class="productive container">
+        <div class="productive__ilustration">
+          <img src="./assets/img/illustration-stay-productive.png" alt="ilustration productive">
+        </div>
+        <div class="productive__info">
+          <h2 class="productive__info--title">Stay productive, wherever you are</h2>
+          <p class="productive__info--paragraph">Never let location be an issue when accessing your files. Fyle
+            has you covered for all of your file staorage needs.
+          </p>
+          <p class="productive__info--paragraph">Securely share files and folders with friends, family and colleagues,
+            for live collaboration. No email attachments required.</p>
+          <div class="productive__info--link">
+            <a href="#">See how Fylo wroks <div></div></a>
+          </div>
+        </div>
+      </section>
+
+      <section class="depoiments container">
+        <img class="depoiments__quotes" src="./assets/icons/bg-quotes.png">
+        <div class="depoiments__items">
+          <p class="depoiments__paragraph">Fylo has improved our team productivity by
+            an order of magnitude. Since making the switch our team has become a 
+            well-olledcollaboration machine.
+          </p>
+          <div class="depoiments__profile">
+            <img src="./assets/img/profile-1.jpg" alt="Satidh Patel">
+            <div class="depoiments__profile--perfil">
+              <p class="depoiments__profile--name">Satidh Patel</p>
+              <p class="depoiments__profile--profession">CEO</p>
+            </div>
+          </div>
+        </div>
+        <div class="depoiments__items">
+          <p class="depoiments__paragraph">Fylo has improved our team productivity by
+            an order of magnitude. Since making the switch our team has become a 
+            well-olledcollaboration machine.
+          </p>
+          <div class="depoiments__profile">
+            <img src="./assets/img/profile-2.jpg" alt="Satidh Patel">
+            <div class="depoiments__profile--perfil">
+              <p class="depoiments__profile--name">Satidh Patel</p>
+              <p class="depoiments__profile--profession">CEO</p>
+            </div>
+          </div>
+        </div>
+        <div class="depoiments__items">
+          <p class="depoiments__paragraph">Fylo has improved our team productivity by
+            an order of magnitude. Since making the switch our team has become a 
+            well-olledcollaboration machine.
+          </p>
+          <div class="depoiments__profile">
+            <img src="./assets/img/profile-3.jpg" alt="Satidh Patel">
+            <div class="depoiments__profile--perfil">
+              <p class="depoiments__profile--name">Satidh Patel</p>
+              <p class="depoiments__profile--profession">CEO</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 </body>
 </html>
