mobile e deskotop reponsive

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section class="started">
       <img class="started__img" src="./assets/img/illustration-intro.png" alt="ilustração inicial">
       <h2 class="started__title">All your files in on secure location, accessible anywhere</h2>
-      <p class="started__paragraph">fylo store all your most important files in one secure laction.</br>Access them
-        wherever you need, share and collaborate with</br> firends family, and co-workers.
+      <p class="started__paragraph">fylo store all your most important files in one secure laction. Access them
+        wherever you need, share and collaborate with firends family, and co-workers.
       </p>
       <button class="started__button">Get Started</button>
     </section>
@@ -187,6 +187,9 @@
             <a href="#"><i data-feather="instagram"></i></i></a>
           </div>
         </div>
+      </div>
+      <div class="footer__copyright">
+        <p>Desenvolvido por <strong>Lucas Katacha</strong> em <strong>2021</strong>, usando <strong>HTML</strong>, <strong>CSS</strong></p>
       </div>
     </footer>
 
