--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
       </div>
       <div class="footer__copyright">
-        <p>Desenvolvido por <strong>Lucas Katacha</strong> em <strong>2021</strong>, usando <strong>HTML</strong>, <strong>CSS</strong></p>
+        <p>Desenvolvido por <strong>Lucas Katacha</strong> em <strong>2021</strong>, usando <strong>HTML</strong> e <strong>CSS.</strong></p>
       </div>
     </footer>
 
