--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/css/global.css">
+  <link rel="stylesheet" href="./assets/css/animate.css">
   <link rel="stylesheet" href="./assets/css/menu/menu.css">
   <link rel="stylesheet" href="./assets/css/started/started.css">
   <link rel="stylesheet" href="./assets/css/features/features.css">
@@ -32,7 +33,7 @@
       </nav>
     </header>
 
-    <section class="started">
+    <section class="started" data-animate="bottom">
       <img class="started__img" src="./assets/img/illustration-intro.png" alt="ilustração inicial">
       <h2 class="started__title">All your files in on secure location, accessible anywhere</h2>
       <p class="started__paragraph">fylo store all your most important files in one secure laction. Access them
@@ -43,27 +44,27 @@
     
     <main class="info ">
       <section class="features container">
-        <div class="features__items">
+        <div class="features__items"data-animate="left">
           <img class="feature__img" src="./assets/icons/icon-access-anywhere.svg" alt="acesso aos seus arquivos">
           <h3 class="feature__title">Access your files, anywhere</h3>
           <p class="feature_paragraph">The ability to use a smartphone, tablet, or 
             computer to acces your 
             account means your files follow you everywhere</p>
         </div>
-        <div class="features__items">
+        <div class="features__items" data-animate="right">
           <img class="feature__img" src="./assets/icons/icon-security.svg" alt="acesso aos seus arquivos">
           <h3 class="feature__title">Security you can trust</h3>
           <p class="feature_paragraph">2-factor authentication and user-controlled
              encryption are just a couple of the security featuures we allow to help
               secure your files</p>
         </div>
-        <div class="features__items">
+        <div class="features__items" data-animate="left">
           <img class="feature__img" src="./assets/icons/icon-collaboration.svg" alt="acesso aos seus arquivos">
           <h3 class="feature__title">Real-time collaboration</h3>
           <p class="feature_paragraph">Securely share files and folders with friends,
              family and colleagues for live collaboration. No email attachments required.</p>
         </div>
-        <div class="features__items">
+        <div class="features__items" data-animate="right">
           <img class="feature__img" src="./assets/icons/icon-any-file.svg" alt="acesso aos seus arquivos">
           <h3 class="feature__title">store any type of file</h3>
           <p class="feature_paragraph">Whether you're sharing holidays photos or
@@ -73,10 +74,10 @@
       </section>
 
       <section class="productive container">
-        <div class="productive__ilustration">
+        <div class="productive__ilustration" data-animate="left">
           <img src="./assets/img/illustration-stay-productive.png" alt="ilustration productive">
         </div>
-        <div class="productive__info">
+        <div class="productive__info" data-animate="right">
           <h2 class="productive__info--title">Stay productive, wherever you are</h2>
           <p class="productive__info--paragraph">Never let location be an issue when accessing your files. Fyle
             has you covered for all of your file staorage needs.
@@ -90,7 +91,7 @@
         </div>
       </section>
 
-      <section class="depoiments container">
+      <section class="depoiments container" data-animate="left">
         <img class="depoiments__quotes" src="./assets/icons/bg-quotes.png">
         <div class="depoiments__items">
           <p class="depoiments__paragraph">Fylo has improved our team productivity by
@@ -134,7 +135,7 @@
       </section>
     </main>
 
-    <section class="newsletter">
+    <section class="newsletter" data-animation="bottom">
       <h2 class="newsletter__title">Get early access today</h2>
       <p class="newsletter__paragraph">if only a minute to sign up and our free starter tler is extremely generous. if 
         yo have any question, our support team would be happy to help you.
@@ -193,6 +194,7 @@
       </div>
     </footer>
 
+  <script src="./assets/js/animate.js"></script>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   <script>
